--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.0",
     "@babel/register": "^7.4.4",
-    "@wdio/cucumber-framework": "^7.4.2",
-    "@wdio/local-runner": "^7.4.5",
+    "@wdio/cucumber-framework": "^5.11.12",
+    "@wdio/local-runner": "^5.11.12",
     "@wdio/selenium-standalone-service": "^5.11.2",
-    "@wdio/spec-reporter": "^7.4.3",
-    "@wdio/sync": "^7.4.5",
-    "chromedriver": "^89.0.0",
-    "wdio-chromedriver-service": "^7.0.0"
+    "@wdio/spec-reporter": "^5.11.7",
+    "@wdio/sync": "^5.11.11",
+    "cucumber": "^7.0.0-rc.0"
   },
   "dependencies": {
     "@wdio/cli": "^5.11.12",
