--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+APPLITOOLS_KEY=enter applitools key from https://eyes.applitools.com/
 DEV_PASSWORD=cucumberpassword
 INT_PASSWORD=cucumberpassword
 ENVIRONMENT=@dev
+
