--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.0",
     "@babel/register": "^7.4.4",
+    "@wdio/applitools-service": "^5.11.0",
     "@wdio/cucumber-framework": "^5.11.12",
     "@wdio/local-runner": "^5.11.12",
     "@wdio/selenium-standalone-service": "^5.11.2",
